<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PageLogin1Fragment">
    <data>
        <variable
            name="viewModel"
            type="com.example.mylogin.PageLogin1ViewModel"/>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >

    <EditText
        android:id="@+id/etloginmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:ems="10"
        android:hint="@string/txtmail"
        android:inputType="textEmailAddress"
        android:text="@={viewModel.uid}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etloginpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/txtpassword"
        android:inputType="textPassword"
        android:text="@={viewModel.password}"
        app:layout_constraintEnd_toEndOf="@+id/etloginmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etloginmail"
        app:layout_constraintTop_toBottomOf="@+id/etloginmail" />

    <Button
        android:id="@+id/btlogin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txtlogin"
        app:layout_constraintEnd_toEndOf="@+id/etloginpassword"
        app:layout_constraintStart_toStartOf="@+id/etloginpassword"
        app:layout_constraintTop_toBottomOf="@+id/etloginpassword" />

    <CheckedTextView
        android:id="@+id/btfotget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/txtforgetpassword"
        app:layout_constraintEnd_toEndOf="@+id/btlogin2"
        app:layout_constraintStart_toStartOf="@+id/btlogin2"
        app:layout_constraintTop_toBottomOf="@+id/btlogin2" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>